# anjo-ai-companion

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bootstrap.yml  ci.yml  deploy.yml
anjo/cli/: main.py
anjo/core/: credits.py  crypto.py  db.py  drift.py  email.py  emotion.py  facts.py  forgetting.py  history.py  llm.py  logger.py  outreach.py  policy.py  prompt_builder.py  safety.py  self_core.py  subscription.py  transcript_queue.py
anjo/dashboard/: app.py  auth.py  background_tasks.py  session_store.py  watchers.py
anjo/dashboard/middleware/: rate_limit.py
anjo/dashboard/routes/: admin_routes.py  auth_routes.py  billing_routes.py  chat_routes.py  forget_routes.py  memory_routes.py  mobile_auth_routes.py  reset_routes.py  self_core_routes.py  story_routes.py
anjo/dashboard/static/: admin.html  billing.html  chat.html  forgot.html  index.html  landing.html  login.html  manifest.json  privacy.html  refund.html  register.html  reset.html  story.html  sw.js  terms.html
anjo/graph/: conversation_graph.py  edges.py  nodes.py  state.py
anjo/memory/: embedder.py  journal.py  long_term.py  memory_graph.py  retrieval_classifier.py
anjo/reflection/: engine.py  log.py
docs/: anjo-overview.md  anjo-technical.md
mobile/: .env.example  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx  billing.tsx  chat.tsx  forget.tsx  settings.tsx  story.tsx
mobile/app/(auth)/: login.tsx  register.tsx
mobile/components/: AnimatedOrb.tsx  Orb.tsx
mobile/lib/: api.ts  auth-context.tsx  orb-colors.ts  sse.ts  storage.ts  theme-context.ts  theme-context.tsx  theme.ts
scripts/: migration_v2.py  server_setup.sh
tests/: conftest.py  test_api.py  test_billing_revenuecat.py  test_crypto.py  test_facts.py  test_graph_integration.py  test_memory.py  test_prelaunch_sweep.py  test_regressions.py  test_sweep.py  test_sweep_fixes.py
