[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anjo"
version = "0.1.0"
description = "Open-source AI companion with persistent memory, personality drift, and emotional intelligence"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "aiofiles>=23.0.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
    "vaderSentiment>=3.3.2",
    "cryptography>=42.0.0",
]

[project.scripts]
anjo = "anjo.cli.main:app"
anjo-dashboard = "anjo.dashboard.app:run"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-level import not at top — intentional for load_dotenv + deferred imports
    "E701",   # multiple statements on one line — used for compact helper tables
    "E741",   # ambiguous variable name — 'O' is intentional OCEAN trait abbreviation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["anjo"]
